Replace Locale constructor